Update scheduled execution instructions